abstract reference to akara and amara in requirements

--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,5 @@ feedparser
 xlrd
 
 hg+http://foundry.zepheira.com/hg/zenpub/#egg=zen
-https://github.com/zepheira/akara/tarball/master
-https://github.com/zepheira/amara/tarball/master
-
+akara
+amara
