--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,5 @@
-include setup.py README MANIFEST.in
+include setup.py README MANIFEST.in requirements.txt
 graft test
+graft etc
 
 exclude test/*.pyc
