Update sample config and all akara modules to latest Akara

--- a/etc/akara.conf
+++ b/etc/akara.conf
@@ -86,15 +86,28 @@ class Akara:
     #      CRITICAL, ERROR, WARN, INFO, DEBUG
     #  Also, WARNING is an alias for WARN
     #
-    LogLevel = "INFO"
+    #LogLevel = "INFO"
+    LogLevel = "DEBUG"
 
 ### Section 2: List of extension modules to install
 
 # These are module names found on the Python path
 
 MODULES = [
+    "zen.akamod.geocoding",
     "freemix_akara.load_data",
-    "freemix_akara.augment_data"
+    "freemix_akara.augment_data",
+    "freemix_akara.contentdm",
     ]
 
 ### Section 3: Other module configuration goes here
+
+class geocoding:
+    cache_max_age = 86400
+    geocoder = "geocoders.get_geocoder('geonames', user='zepheira')"
+
+class load_data:
+    magic_file_command="file -i -"
+    #dataload_diagnostics=True
+    dataload_diagnostics=(not 0) #=True ; Stupid kludge until we remove the limitation on using builtins
+
