Implement OAI ListSets

--- a/etc/akara.conf
+++ b/etc/akara.conf
@@ -105,6 +105,8 @@ MODULES = [
 class geocoding:
     cache_max_age = 86400
     geocoder = "geocoders.get_geocoder('geonames', user='zepheira')"
+    #replace above with the following to use Google geocoder
+    #geocoder = "geocoders.get_geocoder('google')"
 
 class load_data:
     magic_file_command="file -i -"
