--- a/etc/akara.conf
+++ b/etc/akara.conf
@@ -98,6 +98,7 @@ MODULES = [
     "freemix_akara.load_data",
     "freemix_akara.augment_data",
     "freemix_akara.contentdm",
+    "freemix_akara.oai",
     ]
 
 ### Section 3: Other module configuration goes here
