--- a/test/resource/akara.conf
+++ b/test/resource/akara.conf
@@ -30,12 +30,12 @@
 
 class Akara:
     #  Listen: interface name (optional) and port to listen for HTTP requests
-    Listen = 8880
+    Listen = %(port)s 
     #  To specify the interface name use this format:
     #  Listen = "localhost:8880"
 
     # ServerRoot = os.path.join(sys.prefix, "share", "akara")
-    ServerRoot = "/Users/dfeeney/virtualenvs/freemix-akara/share/akara"
+    ConfigRoot = "%(config_root)s"
     #  PidFile: Filename which holds the process id of a running Akara
     #  server. The file is created when Akara starts and removed when it
     #  exists. It contains a single line: the pid followed by a newline.
